# PipelinePro

./: .gitignore  CMakeLists.txt  Pipeline.vcxproj  PipelineLib.h  README.md
doc/: doc.md
examples/: CMakeLists.txt  action_with_variables_example.cpp  condition_process_pipeline.cpp  coordinate_variables_example.cpp  file_pipeline.cpp  fully_structured_example.cpp  global_variable_pipeline.cpp  ocr_batch_example.cpp  recognition_example.cpp  simple_pipeline.cpp  stop_task_pipeline.cpp  structured_action_example.cpp  suspend_resume_pipeline.cpp  variable_pipeline.cpp
include/: PipelineLib.h
include/Pipeline/: Action.h  Common.h  Node.h  Pipeline.h  PipelineExecutor.h  Recognition.h  Task.h  VariableManager.h
include/Pipeline/Action/: Action.h  AppActions.h  BasicActions.h  InputActions.h  SystemActions.h
include/Pipeline/Recognition/: BasicRecognitions.h  ColorRecognitions.h  OcrRecognition.h  Recognition.h  TemplateRecognitions.h
include/vision/engine/: WindowVision.h
src/: Action.cpp  Common.cpp  Node.cpp  Pipeline.cpp  PipelineExecutor.cpp  PipelineLib.cpp  Recognition.cpp  VariableManager.cpp
src/Action/: Action.cpp  AppActions.cpp  BasicActions.cpp  InputActions.cpp  SystemActions.cpp
src/Recognition/: BasicRecognitions.cpp  ColorRecognitions.cpp  OcrRecognition.cpp  Recognition.cpp  TemplateRecognitions.cpp
src/engine/: WindowVision.cpp
tests/: CMakeLists.txt  test_json_parsing.cpp  test_node_execution.cpp  test_pipeline_execution.cpp
